apps/desktop/src-tauri/tests/snapshots/prompt_snapshots__propose_basic.snap
---
source: tests/prompt_snapshots.rs
expression: render_propose(&input)
---
<!-- version: 1 | GUM §8 mapped from PROPOSE_PROMPT -->

你是 Corivo 的命题草拟员。下面是用户在 2026-04-17T09:00:00+00:00 到 2026-04-17T09:30:00+00:00 期间的一组观察记录（按时间从早到晚）。请从中归纳出 1–3 条关于"用户本人"的稳定命题（偏好、习惯、工作方式、状态），供长期用户模型使用。

观察记录：
1. 09:00 用户在 Notion 打开 'Q2 OKR' 文档，连续编辑 15 分钟
2. 09:16 用户切到 Slack 浏览 #product 频道后返回 Notion

命题要求：
- 用第三人称写作（"用户……"），描述长期稳定的倾向，不要复述一次性事件
- 避免人身评价、避免敏感推断（健康 / 关系 / 政治立场等）
- `reasoning` 要引用至少一条观察原文中的事实依据
- `confidence` 1–10：证据越充分越高；单次观察通常 ≤ 5
- `decay` 1–10：越容易随时间失效越低（例如当日打算 ≤ 3；长期习惯 ≥ 7）

仅输出 JSON 数组，形如：

```json
[
  {"text": "...", "reasoning": "...", "confidence": 7, "decay": 6}
]
```

不要输出任何其它文字、不要 Markdown 包裹、不要省略字段。
