apps/desktop/src-tauri/tests/snapshots/prompt_snapshots__score_with_contradict.snap
---
source: tests/prompt_snapshots.rs
expression: render_score(&input)
---
<!-- version: 1 | C 阶段 Proactivity Score (P_S) — replaces hard-gate min_confidence -->

你是 Corivo 的"打扰守门人"。Corivo 长期观察用户行为，刚刚得出了一条新的判断（命题）。
你要给这条命题打一个**主动性分数 P_S（1-5 整数）**——决定它现在值不值得用刘海通知打扰用户。

打分语义（**保守倾向**——拿不准就给低）：
- 5 = 必须现在告诉用户（紧急 / 用户极可能错过 / 关键决策依据）
- 4 = 应该告诉（明显有价值，且用户当下能接收）
- 3 = 可推可不推（一般性观察、价值中性）
- 2 = 不推为宜（轻微相关、用户大概率不感兴趣）
- 1 = 绝不要推（与用户无关 / 已知重复 / 冗余）

判分时综合考虑：
- **新意**：相比"已有相关命题"，这条带来了新信息吗？还是冗余？
- **当下相关性**：从"用户最近做的事"看，现在打扰合不合适？
- **频率**：最近 1 小时已经推了几条？同主题之前推过吗？反应如何？
- **置信度**：低 confidence 命题（≤4）一般给低分；除非内容本身高价值
- **冲突**：是 contradict 类时用户可能需要裁决，倾向给高分

---

【新命题】
- 内容：用户偏好浅色主题
- 依据：最近每天早上切浅色
- 置信度：6/10
- 衰减权重：6/10
- 是否冲突命题：是（与命题「用户偏好深色主题」冲突）

【相关已有命题（按相关性排序）】
（暂无相关命题）

【用户最近的屏幕活动（最新 3 条 observations，由早到晚）】
（暂无最近活动）

【该主题（同 revision_group）最近的推送】
（这是该主题首次推送）

【全局最近 1 小时的推送概况】
过去 1 小时无推送

---

仅输出 JSON，恰好一个对象：

```json
{"p_s": 4, "reasoning": "为什么打这个分（中文，30-50 字）"}
```

不要 Markdown 包裹，不要任何额外文字。p_s 必须是 1-5 之间的整数。
